# gemHarvest2Caom2

./: Dockerfile  README.md  setup.cfg  setup.py
data/: from_paul.txt
gemHarvest2Caom2/: collection.py
gemHarvest2Caom2/tests/: test_collection.py
gemHarvest2Caom2/tests/data/: test_obs.xml
image/: Dockerfile  app.py  collection.py
