[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
testpaths = gemHarvest2Caom2

[bdist_wheel]
universal=1

[metadata]
package_name = gemHarvest2Caom2
description = Gemini-specific metadata harvesting, implements the CAOM2 endpoints.
long_description = TBD
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = TBD
edit_on_github = False
github_project = opencadc-metadata-curation/gemHarvest2Caom2
install_requires = bs4
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1

[entry_points]
gemListObservations = gemHarvest2Caom2:list_observations
gemGetObservation = gemHarvest2Caom2:get_observation

